testsuite/tests/saks/should_fail/T16756b.stderr

T16756b.hs:8:1: error: [GHC-83865]
    • Expected a type, but found something with kind ‘* -> *’
    • In the data type declaration for ‘T’
